@@ -3,6 +3,9 @@ It's written in Java and aims to be run on any system (windows, linux or mac).
 
 This program runs with Java 1.6 or later
 
+Changelog in 1.3.1 : 
+Added the missing flags
+
 Changelog in 1.3 :
 Added functionality : Import roms from both drag & drop and the menu. Addition of the related panel into the configuration (and window)
 Added functionality : Deletion of duplicate roms with a user's defined order => A new scan MUST be
